# rsvelte

./: +page.rsvelte  +page2.rsvelte  +page3.rsvelte  Cargo.toml  README.md  TODO.md  architecture.md  build.rs  rustfmt.toml  state_ideas.rsvelte
examples/: run_wasm_reloader.rs  show_output.rs
src/: code_gen.rs  lib.rs  utils.rs
src/code_gen/: fragment.rs  if_funcs.rs  mod.rs  mount_func.rs  new_func.rs  proc_func.rs  scope.rs  unmount_func.rs  update_func.rs
src/parse/: css_parse.rs  html_parse.rs  mod.rs
src/parse/rs_parse/: gen_expr.rs  gen_funcs.rs  gen_vars.rs  mod.rs
src/static_files/: Cargo.toml  index.html  lib.rs  patches.js
src/transform/: attr.rs  derived.rs  each_block.rs  event.rs  expr.rs  func.rs  if_block.rs  mod.rs  node.rs  patches.rs  state.rs  utils.rs
src/transform/node/: attr.rs  each_block.rs  fragment.rs  if_block.rs  if_funcs.rs  infer.rs  mod.rs  mount_func.rs  new_func.rs  proc_func.rs  scope.rs  unmount_func.rs  update_func.rs  utils.rs
test-prj1/src/: +page.rsvelte  Button.rsvelte
