[package]
name = "rsvelte"
license = "MIT"
version = "0.1.0"
edition = "2024"
description = "Compiler for RSvelte, a Rust-based Svelte-like framework"

[dependencies]
cfg-if = "1.0.4"
colored = "3.0.0"
log = "0.4.29"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full", "visit", "visit-mut"] }
web-sys = { version = "0.3.83", features = ["Event"] }

[dev-dependencies]
env_logger = "0.11.8"
